apps/paperless-ngx/kustomization/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
  labels:
    gateway-access: private
    security.yiannis.io/require-harbor: "true"
