apps/paperless-ngx/kustomization/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-private
spec:
  parentRefs:
  - name: private
    namespace: traefik
    sectionName: websecure-docs
  hostnames:
  - docs.yiannis.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: paperless-ngx
      port: 8000
