apps/paperless-ngx/kustomization/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless-ngx-ingress
  namespace: paperless-ngx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless-ngx
      app.kubernetes.io/name: paperless-ngx
      app.kubernetes.io/controller: paperless-ngx
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: homepage
        app.kubernetes.io/name: homepage
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless-ngx-egress
  namespace: paperless-ngx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless-ngx
      app.kubernetes.io/name: paperless-ngx
      app.kubernetes.io/controller: paperless-ngx
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: paperless-ngx
        app.kubernetes.io/name: postgresql
        cnpg.io/cluster: paperless-ngx-database
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: paperless-ngx
        app.kubernetes.io/instance: paperless-ngx
        app.kubernetes.io/name: paperless-ngx
        app.kubernetes.io/controller: redis
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
  - toFQDNs:
    - matchName: authentik.yiannis.io
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
