apps/paperless-ngx/kustomization/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paperless-ngx-ingress
  namespace: paperless-ngx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless-ngx
      app.kubernetes.io/name: paperless-ngx
      app.kubernetes.io/controller: paperless-ngx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: homepage
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: paperless-ngx

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paperless-ngx-egress
  namespace: paperless-ngx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless-ngx
      app.kubernetes.io/name: paperless-ngx
      app.kubernetes.io/controller: paperless-ngx
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: paperless-ngx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: postgresql
          cnpg.io/cluster: paperless-ngx-database
    ports:
    - protocol: TCP
      port: 5432
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: paperless-ngx
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: paperless-ngx
          app.kubernetes.io/name: paperless-ngx
          app.kubernetes.io/controller: redis
    ports:
    - protocol: TCP
      port: 6379
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 443
